tests/cases/control-flow/ok/loop-fallthrough-borrow-release-merge.ari
fn inspect(value: ref i64) -> i64 {
  return 3;
}

fn main() -> i64 {
  var number = 7;
  let shared = ref number;
  var total = 0;
  var index = 0;

  while index < 1 {
    total = total + inspect(shared);
    index = index + 1;
  }

  return total + number + index;
}

