tests/cases/control-flow/errors/control-flow-ref-mut-enum-temporary.ari
enum MaybeWide {
  Empty,
  Full(i64),
}

fn make() -> MaybeWide {
  return Full(1);
}

fn main() -> i64 {
  match make() {
    Full(ref mut value) => {
      return 1;
    }
    Empty => {}
  }
  return 0;
}
